Updated test diagram with correct tangent line angle and full diameter display

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
     <section class="svg-diagram-section">
         <div id="spherical-earth-diagram"></div>
         <div id="solar-altitude-diagram"></div>
+        <div class="test-diagram-container">
+            <div id="angle-test-diagram"></div>
+            <div id="angle-test-info"></div>
+        </div>
     </section>
   </main>
 
@@ -106,5 +110,6 @@
   <script src="main.js" type="module"></script>
   <script src="spherical_Earth_diagram.js" type="module"></script>
   <script src="solar_altitude_diagram.js" type="module"></script>
+  <script src="angle_test_diagram.js" type="module"></script>
 </body>
 </html>
