--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                     <i class="fas fa-question-circle"></i>
                 </span>
             </div>
+            <div>
+                <label for="solar-azimuth-output">Solar Azimuth (degrees):</label>
+                <input type="number" id="solar-azimuth-output" disabled value="0" step="0.1">
+                <span class="help-icon" data-help="The sun's horizontal direction measured clockwise from true north. 0° is north, 90° is east, 180° is south, and 270° is west.">
+                    <i class="fas fa-question-circle"></i>
+                </span>
+            </div>
         </section>
 
         <!-- Right side: Map and search -->
