--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
                     <i class="fas fa-question-circle"></i>
                 </span>
             </div>
-            <div>
+            <div class="output-group">
                 <label for="solar-azimuth-output">Solar Azimuth (degrees):</label>
-                <input type="number" id="solar-azimuth-output" disabled value="0" step="0.1">
-                <span class="help-icon" data-help="The sun's horizontal direction measured clockwise from true north. 0° is north, 90° is east, 180° is south, and 270° is west.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
+                <input type="text" id="solar-azimuth-output" readonly>
+            </div>
+            <div class="output-group">
+                <label for="solar-zenith-output">Solar Zenith (degrees):</label>
+                <input type="text" id="solar-zenith-output" readonly>
             </div>
         </section>
 
@@ -107,6 +108,20 @@
             <div id="angle-test-diagram"></div>
         </div>
     </section>
+    <section id="sun-path-container" style="width: 100%; height: 400px; margin-top: 20px;">
+        <!-- Three.js will render here -->
+    </section>
+    <style>
+        #sun-path-container {
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .cardinal-marker {
+            color: #333;
+            font-weight: bold;
+            pointer-events: none;
+        }
+    </style>
   </main>
 
   <!-- Reference to the main.js file -->
