Add Calculated Outputs section and match header font styles

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
             </div>
             <div id="map"></div>
         </section>
+
+        <!-- Calculated Outputs Section -->
+        <section class="calculated-outputs-section">
+            <h2>Calculated Outputs</h2>
+        </section>
     </div>
 
     <!-- Table section (below both inputs and map) -->
