Fix map section width and prevent overlap in inputs wrapper

--- a/index.html
+++ b/index.html
@@ -22,86 +22,92 @@
 
   <main>
     <div class="content-wrapper">
-        <!-- Left side: Input fields -->
-        <section class="new-inputs-section">
-            <div>
-                <label for="location-latitude-input">Location Latitude:</label>
-                <input type="range" id="location-latitude-slider" min="-90" max="90" value="51.3" step="0.1">
-                <input type="number" id="location-latitude-input" min="-90" max="90" step="0.1" value="51.3" title="Input location latitude">
-                <span class="help-icon" data-help="Input the latitude of your location in degrees. Valid range is from -90° (South Pole) to 90° (North Pole).">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="location-longitude-input">Location Longitude:</label>
-                <input type="range" id="location-longitude-slider" min="-180" max="180" value="0" step="0.1">
-                <input type="number" id="location-longitude-input" min="-180" max="180" step="0.1" value="0" title="Input location longitude">
-                <span class="help-icon" data-help="Input the longitude of your location in degrees. Valid range is from -180° (West) to 180° (East).">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="selected-date">Date:</label>
-                <input type="date" id="selected-date" disabled>
-                <span class="help-icon" data-help="Select a date to calculate solar positions. The date affects the sun's declination and day length.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="solar-time">Solar Time:</label>
-                <input type="time" id="solar-time" disabled>
-                <span class="help-icon" data-help="Solar time based on the sun's position relative to your longitude. Solar noon is when the sun crosses your meridian.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="local-time">Local Standard Time:</label>
-                <span id="eot-display">EoT: 0:00</span>
-                <input type="time" id="local-time" disabled>
-                <span class="help-icon" data-help="Local time adjusted for your timezone offset from UTC. This is the time shown on clocks in your location.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="latitude-overhead-input">Latitude at which the sun is directly overhead:</label>
-                <input type="range" id="latitude-overhead-slider" min="-23.5" max="23.5" value="0" step="0.1">
-                <input type="number" id="latitude-overhead-input" min="-23.5" max="23.5" step="0.1" value="0" title="Input latitude for sun directly overhead">
-                <span class="help-icon" data-help="Input the latitude in degrees at which the Sun is directly overhead. The Sun can be directly overhead anywhere in the Tropic Zone from 23.5° N to 23.5° S. The valid range is from -23.5° to 23.5°.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="solar-elevation-output">Solar Elevation/Altitude (degrees):</label>
-                <input type="number" id="solar-elevation-output" disabled value="0" step="0.1">
-                <span class="help-icon" data-help="The angle between the horizon (tangent line) and the sun's position in the sky. Positive values indicate the sun is above the horizon, negative values indicate the sun is below the horizon.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="solar-azimuth-output">Solar Azimuth (degrees):</label>
-                <input type="text" id="solar-azimuth-output" readonly>
-                <span class="help-icon" data-help="The horizontal angle of the sun measured clockwise from true North. 0° is North, 90° is East, 180° is South, and 270° is West.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
-            </div>
-            <div>
-                <label for="solar-zenith-output">Solar Zenith (degrees):</label>
-                <input type="text" id="solar-zenith-output" readonly>
-                <span class="help-icon" data-help="The angle between the sun and the vertical (zenith). 0° means the sun is directly overhead, 90° means the sun is at the horizon.">
-                    <i class="fas fa-question-circle"></i>
-                </span>
+        <!-- Inputs Section Wrapper -->
+        <section class="inputs-wrapper-section">
+            <h2>Inputs</h2>
+            <div class="inputs-container">
+                <!-- Left side: Input fields -->
+                <section class="new-inputs-section">
+                    <div>
+                        <label for="location-latitude-input">Location Latitude:</label>
+                        <input type="range" id="location-latitude-slider" min="-90" max="90" value="51.3" step="0.1">
+                        <input type="number" id="location-latitude-input" min="-90" max="90" step="0.1" value="51.3" title="Input location latitude">
+                        <span class="help-icon" data-help="Input the latitude of your location in degrees. Valid range is from -90° (South Pole) to 90° (North Pole).">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="location-longitude-input">Location Longitude:</label>
+                        <input type="range" id="location-longitude-slider" min="-180" max="180" value="0" step="0.1">
+                        <input type="number" id="location-longitude-input" min="-180" max="180" step="0.1" value="0" title="Input location longitude">
+                        <span class="help-icon" data-help="Input the longitude of your location in degrees. Valid range is from -180° (West) to 180° (East).">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="selected-date">Date:</label>
+                        <input type="date" id="selected-date" disabled>
+                        <span class="help-icon" data-help="Select a date to calculate solar positions. The date affects the sun's declination and day length.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="solar-time">Solar Time:</label>
+                        <input type="time" id="solar-time" disabled>
+                        <span class="help-icon" data-help="Solar time based on the sun's position relative to your longitude. Solar noon is when the sun crosses your meridian.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="local-time">Local Standard Time:</label>
+                        <span id="eot-display">EoT: 0:00</span>
+                        <input type="time" id="local-time" disabled>
+                        <span class="help-icon" data-help="Local time adjusted for your timezone offset from UTC. This is the time shown on clocks in your location.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="latitude-overhead-input">Latitude at which the sun is directly overhead:</label>
+                        <input type="range" id="latitude-overhead-slider" min="-23.5" max="23.5" value="0" step="0.1">
+                        <input type="number" id="latitude-overhead-input" min="-23.5" max="23.5" step="0.1" value="0" title="Input latitude for sun directly overhead">
+                        <span class="help-icon" data-help="Input the latitude in degrees at which the Sun is directly overhead. The Sun can be directly overhead anywhere in the Tropic Zone from 23.5° N to 23.5° S. The valid range is from -23.5° to 23.5°.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="solar-elevation-output">Solar Elevation/Altitude (degrees):</label>
+                        <input type="number" id="solar-elevation-output" disabled value="0" step="0.1">
+                        <span class="help-icon" data-help="The angle between the horizon (tangent line) and the sun's position in the sky. Positive values indicate the sun is above the horizon, negative values indicate the sun is below the horizon.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="solar-azimuth-output">Solar Azimuth (degrees):</label>
+                        <input type="text" id="solar-azimuth-output" readonly>
+                        <span class="help-icon" data-help="The horizontal angle of the sun measured clockwise from true North. 0° is North, 90° is East, 180° is South, and 270° is West.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="solar-zenith-output">Solar Zenith (degrees):</label>
+                        <input type="text" id="solar-zenith-output" readonly>
+                        <span class="help-icon" data-help="The angle between the sun and the vertical (zenith). 0° means the sun is directly overhead, 90° means the sun is at the horizon.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                </section>
+    
+                <!-- Right side: Map and search -->
+                <section class="map-section">
+                    <div class="location-search-container">
+                        <input type="text" id="location-search" placeholder="Enter location...">
+                        <button id="search-button">Search</button>
+                    </div>
+                    <div id="map"></div>
+                </section>
             </div>
         </section>
-
-        <!-- Right side: Map and search -->
-        <section class="map-section">
-            <div class="location-search-container">
-                <input type="text" id="location-search" placeholder="Enter location...">
-                <button id="search-button">Search</button>
-            </div>
-            <div id="map"></div>
-        </section>
-
+    
         <!-- Calculated Outputs Section -->
         <section class="calculated-outputs-section">
             <h2>Calculated Outputs</h2>
