Make output field values bold and change readonly to disabled

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                 </div>
                 <div>
                     <label for="solar-azimuth-output">Solar Azimuth (degrees):</label>
-                    <input type="text" id="solar-azimuth-output" readonly>
+                    <input type="text" id="solar-azimuth-output" disabled>
                     <span class="help-icon" data-help="The horizontal angle of the sun measured clockwise from true North. 0° is North, 90° is East, 180° is South, and 270° is West.">
                         <i class="fas fa-question-circle"></i>
                     </span>
                 </div>
                 <div>
                     <label for="solar-zenith-output">Solar Zenith (degrees):</label>
-                    <input type="text" id="solar-zenith-output" readonly>
+                    <input type="text" id="solar-zenith-output" disabled>
                     <span class="help-icon" data-help="The angle between the sun and the vertical (zenith). 0° means the sun is directly overhead, 90° means the sun is at the horizon.">
                         <i class="fas fa-question-circle"></i>
                     </span>
