--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </span>
                     </div>
                     <div>
-                        <label for="latitude-overhead-input">Latitude at which the sun is directly overhead:</label>
+                        <label for="latitude-overhead-input">Solar Declination:</label>
                         <input type="range" id="latitude-overhead-slider" min="-23.5" max="23.5" value="0" step="0.1">
                         <input type="number" id="latitude-overhead-input" min="-23.5" max="23.5" step="0.1" value="0" title="Input latitude for sun directly overhead">
                         <span class="help-icon" data-help="Input the latitude in degrees at which the Sun is directly overhead. The Sun can be directly overhead anywhere in the Tropic Zone from 23.5° N to 23.5° S. The valid range is from -23.5° to 23.5°.">
