Add new responsive layout structure and adjust margins/padding

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
   </header>
 
   <main>
+    <!-- New Structure -->
+    <div class="outer-wrapper">
+        <div class="inner-wrapper">
+            <div class="section-title">Inputs</div>
+            <div class="section input-fields">
+                <!-- Add input fields here -->
+            </div>
+            <div class="section latitude-finder">
+                <!-- Add latitude finder here -->
+            </div>
+        </div>
+        <div class="calculated-inputs">
+            <div class="section-title">Calculated Inputs</div>
+            <!-- Add calculated input content here -->
+        </div>
+    </div>
     <div class="content-wrapper">
         <!-- Inputs Section Wrapper -->
         <section class="inputs-wrapper-section">
