Update index.html with responsive layout changes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
     <div class="outer-wrapper">
         <div class="inner-wrapper">
             <div class="section-title">Inputs</div>
-            <div class="section input-fields">
-                <!-- Add input fields here -->
-            </div>
-            <div class="section latitude-finder">
-                <!-- Add latitude finder here -->
+            <div class="input-sections">
+                <div class="section input-fields">
+                    <!-- Add input fields here -->
+                </div>
+                <div class="section latitude-finder">
+                    <!-- Add latitude finder here -->
+                </div>
             </div>
         </div>
         <div class="calculated-inputs">
