--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- New Structure -->
     <div class="outer-wrapper">
         <div class="inner-wrapper">
-            <div class="section-title">Inputs</div>
             <div class="input-sections">
                 <div class="section input-fields">
+                    <div class="section-title">Inputs</div>
                     <div>
                         <label for="location-latitude-input">Location Latitude:</label>
                         <input type="range" id="location-latitude-slider" min="-90" max="90" value="51.3" step="0.1">
@@ -73,6 +73,28 @@
                             <i class="fas fa-question-circle"></i>
                         </span>
                     </div>
+                    <div class="section-title">Calculated Outputs</div>
+                    <div>
+                        <label for="solar-elevation-output">Solar Elevation/Altitude (degrees):</label>
+                        <input type="number" id="solar-elevation-output" disabled value="0" step="0.1">
+                        <span class="help-icon" data-help="The angle between the horizon (tangent line) and the sun's position in the sky. Positive values indicate the sun is above the horizon, negative values indicate the sun is below the horizon.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="solar-azimuth-output">Solar Azimuth (degrees):</label>
+                        <input type="text" id="solar-azimuth-output" disabled>
+                        <span class="help-icon" data-help="The horizontal angle of the sun measured clockwise from true North. 0° is North, 90° is East, 180° is South, and 270° is West.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <label for="solar-zenith-output">Solar Zenith (degrees):</label>
+                        <input type="text" id="solar-zenith-output" disabled>
+                        <span class="help-icon" data-help="The angle between the sun and the vertical (zenith). 0° means the sun is directly overhead, 90° means the sun is at the horizon.">
+                            <i class="fas fa-question-circle"></i>
+                        </span>
+                    </div>
                 </div>
                 <div class="section latitude-finder">
                     <div class="location-search-container">
@@ -85,29 +107,7 @@
         </div>
         <div class="calculated-outputs">
             <div class="section-title">Calculated Outputs</div>
-            <div class="outputs-container">
-                <div>
-                    <label for="solar-elevation-output">Solar Elevation/Altitude (degrees):</label>
-                    <input type="number" id="solar-elevation-output" disabled value="0" step="0.1">
-                    <span class="help-icon" data-help="The angle between the horizon (tangent line) and the sun's position in the sky. Positive values indicate the sun is above the horizon, negative values indicate the sun is below the horizon.">
-                        <i class="fas fa-question-circle"></i>
-                    </span>
-                </div>
-                <div>
-                    <label for="solar-azimuth-output">Solar Azimuth (degrees):</label>
-                    <input type="text" id="solar-azimuth-output" disabled>
-                    <span class="help-icon" data-help="The horizontal angle of the sun measured clockwise from true North. 0° is North, 90° is East, 180° is South, and 270° is West.">
-                        <i class="fas fa-question-circle"></i>
-                    </span>
-                </div>
-                <div>
-                    <label for="solar-zenith-output">Solar Zenith (degrees):</label>
-                    <input type="text" id="solar-zenith-output" disabled>
-                    <span class="help-icon" data-help="The angle between the sun and the vertical (zenith). 0° means the sun is directly overhead, 90° means the sun is at the horizon.">
-                        <i class="fas fa-question-circle"></i>
-                    </span>
-                </div>
-            </div>
+            <!-- Placeholder for future content -->
         </div>
     </div>
 
