Replace minified JS files with unminified versions for better readability

--- a/index.html
+++ b/index.html
@@ -1502,7 +1502,7 @@
 
     <!-- Include Leaflet Maps library -->
     <script type="text/javascript" src="./scripts/leaflet.js" crossorigin=""></script>
-    <script type="text/javascript" src="./scripts/Control.Geocoder.min.js"></script>
+    <script type="text/javascript" src="./scripts/Control.Geocoder.js"></script>
 
     <!-- Include latest Bootstrap -->
     <!-- script type="text/javascript" src="./js/bootstrap-3.3.2.min.js?vpd-10303"></script -->
@@ -1510,17 +1510,17 @@
 
     <!-- Include latest Knockout and Boostrap bindings -->
     <!-- script type="text/javascript" src="./js/knockout-3.4.0.min.js?vpd-10303"></script -->
-    <script type="text/javascript" src="./scripts/knockout-min.js"></script>
+    <script type="text/javascript" src="./scripts/knockout.js"></script>
 
     <!-- Include D3 chart libraries -->
     <!-- script type="text/javascript" src="./js/d3-3.5.5.min.js?vpd-10303"></script -->
-    <script type="text/javascript" src="./scripts/d3.min.js"></script>
+    <script type="text/javascript" src="./scripts/d3.js"></script>
 
     <!-- Include Bootstrap and Knockout plugins -->
-    <script type="text/javascript" src="./scripts/merged-bs-and-ko-utils.min.js"></script>
+    <script type="text/javascript" src="./scripts/merged-bs-and-ko-utils.js"></script>
 
     <!-- Include split-pane functions -->
-    <script type="text/javascript" src="./scripts/split-pane.min.js"></script>
+    <script type="text/javascript" src="./scripts/split-pane.js"></script>
 
     <!--
     /////////////////////////////////////////////////////////////////
@@ -1528,9 +1528,9 @@
     /////////////////////////////////////////////////////////////////
     -->
 
-    <script type="text/javascript" src="./scripts/sunpath3d-core.min.js"></script>
-    <script type="text/javascript" src="./scripts/sunpath3d-opts.min.js"></script>
-    <script type="text/javascript" src="./scripts/sunpath3d.min.js"></script>
+    <script type="text/javascript" src="./scripts/sunpath3d-core.js"></script>
+    <script type="text/javascript" src="./scripts/sunpath3d-opts.js"></script>
+    <script type="text/javascript" src="./scripts/sunpath3d.js"></script>
 
     <!--
     /////////////////////////////////////////////////////////////////
